# Open-EV

./: .gitignore  Dockerfile  LICENSE  README.md  SPACES_README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  web_ui.html
email_triage/: __init__.py  data.py  environment.py  graders.py  models.py
server/: __init__.py  app.py
tests/: test_environment.py
